6day cal. view bug + Reminder aligned under cal

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -439,6 +439,36 @@ It will look normal on 1080p, 1440p, and 4k monitors */
         box-shadow: 0 0.5rem 3rem rgba(0,0,0,4);
        
     }
+    .reminders h2{
+        text-decoration: underline;
+        text-transform: uppercase;
+        margin-left: 36%;
+        margin-top: 0%;
+        margin-bottom: 65%;
+    }
+    .reminders section{
+        margin-left: 0%;
+        margin-top: -63%;
+        margin-bottom: 0%;
+    }
+    .days{
+        width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+        padding: .2rem;
+        text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.5);
+    }
+    .days div{
+        font-size: 1.4rem;
+        margin: .275rem;
+        width: calc(40.2rem/7);
+        height: 5rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.5);
+        transition: background-color 0.2s;
+    }
 }
 
 /**************** 3b) SPECIFIC MOBILE VIEW CONFIGURATIONS ****************/
